[metadata]
name = labeledmatrix
version = attr: version.__version__
description = Matrix operations with named rows and columns
long_description = file: README.md
url = 'https://github.com/tinyclues/labeledmatrix'
classifiers =
        Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = False

[options.packages.find]
exclude = tests

[tool:pytest]
addopts =
    -rA -v --color=yes --showlocals --durations=10 --doctest-modules
    --cov=labeledmatrix --cov=cyperf --cov-report=term
testpaths =
    tests

[pylint.FORMAT]
max-line-length = 120
[pylint.MESSAGES CONTROL]
disable = no-name-in-module,missing-module-docstring,fixme
[pylint.BASIC]
good-names = i,j,k,f,X,y,ks,n,m,lm,_,w,ww,h,hh,u,s,v,nb,ax
[pylint.REPORTS]
output-format = colorized

# TODO add doctests back: cyperf,labeledmatrix
